# swirski-terminal

./: .gitignore  LICENSE  README.md  buildDesktop.sh  buildESP32.sh  idfMenu.sh
.github/workflows/: firmware-release.yml
app/: CMakeLists.txt  app.cpp  app.hpp  app_constants.hpp
app/input/: input.cpp  input.hpp
app/models/: notification.hpp
app/protocol/: message.hpp  message_type.hpp  protocol.cpp  protocol.hpp
app/screen/: screen.cpp  screen.hpp
app/screens/: blackjack_screen.cpp  blackjack_screen.hpp  games_screen.cpp  games_screen.hpp  home_screen.cpp  home_screen.hpp  music_screen.cpp  music_screen.hpp  notification_screen.cpp  notification_screen.hpp  notifications_screen.cpp  notifications_screen.hpp  pong_screen.cpp  pong_screen.hpp  screen_manager.cpp  screen_manager.hpp  settings_screen.cpp  settings_screen.hpp  snake_screen.cpp  snake_screen.hpp  tetris_screen.cpp  tetris_screen.hpp  weather_screen.cpp  weather_screen.hpp  wifi_screen.cpp  wifi_screen.hpp
app/services/: date_time.cpp  date_time.hpp  display_text.hpp  firmware_update.cpp  firmware_update.hpp  keyboard_service.cpp  keyboard_service.hpp  music_service.cpp  music_service.hpp  notification_service.cpp  notification_service.hpp  notifications.cpp  notifications.hpp  settings_service.cpp  settings_service.hpp  weather_service.cpp  weather_service.hpp  wifi_service.cpp  wifi_service.hpp
app/state/: system_state.cpp  system_state.hpp
app/transport/: ble_security.hpp  message_handler.cpp  message_handler.hpp  messages.hpp  transport.hpp
app/ui/: keyboard.cpp  keyboard.hpp  notification_toast.cpp  notification_toast.hpp  status_bar.cpp  status_bar.hpp  swirski_ui.hpp
app/ui/fonts/: swirski_font_12.c  swirski_font_14.c  swirski_fonts.hpp
desktop/: CMakeLists.txt  lv_conf.h  main.cpp  tests.cpp
desktop/inputs/: keyboard.cpp  keyboard.hpp
desktop/websocket_transport/: websocket_transport.cpp  websocket_transport.hpp
docs/: ble-framing.md
esp32/: CMakeLists.txt  CMakePresets.json  partitions.csv  sdkconfig.defaults
esp32/main/: CMakeLists.txt  idf_component.yml  main.cpp
esp32/main/ble_transport/: ble_transport.cpp  ble_transport.hpp
esp32/main/inputs/: push_buttons.cpp  push_buttons.hpp  rotary_encoder.cpp  rotary_encoder.hpp
esp32/main/settings/: hardware_settings.cpp  hardware_settings.hpp
mobile/: App.tsx  app.json  package-lock.json  package.json  react-native.config.cjs
mobile/android/: link-assets-manifest.json  settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/swirski/terminal/: MainActivity.kt  MainApplication.kt
mobile/android/app/src/main/java/com/swirski/terminal/background/: SwirskiBackgroundModule.kt  SwirskiBackgroundPackage.kt  SwirskiConnectionService.kt
mobile/android/app/src/main/java/com/swirski/terminal/media/: SwirskiMediaModule.kt  SwirskiMediaPackage.kt
mobile/android/app/src/main/java/com/swirski/terminal/notifications/: SwirskiNotificationListenerService.kt  SwirskiNotificationsModule.kt  SwirskiNotificationsPackage.kt
mobile/android/app/src/main/java/com/swirski/terminal/weather/: SwirskiLocationModule.kt  SwirskiWeatherPackage.kt
mobile/android/app/src/main/res/values/: strings.xml
mobile/ios/: Podfile
mobile/ios/SwirskiMobile/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
mobile/ios/SwirskiMobile.xcodeproj/: project.pbxproj
mobile/ios/SwirskiMobile.xcodeproj/xcshareddata/xcschemes/: SwirskiMobile.xcscheme
mobile/src/ble/: constants.ts  encoding.ts  framing.ts  requestBlePermissions.ts  types.ts  useTerminalBle.ts
mobile/src/components/: ConnectionPanel.tsx  DebugActions.tsx  DeviceList.tsx  WifiPanel.tsx
mobile/src/music/: handleMusicCommand.ts  useMusicBridge.ts
mobile/src/notifications/: useNotificationBridge.ts
mobile/src/protocol/: messages.ts
mobile/src/screens/: TerminalScreen.tsx
mobile/src/weather/: useWeatherBridge.ts
mobile/src/wifi/: useTerminalWifi.ts
