idf_component_register(
    SRCS
        "app.cpp"
        "input/*.cpp"
        "screens/*.cpp"
        "services/*.cpp"
        "ui/*.cpp"
        "transport/*.cpp"
    INCLUDE_DIRS
        "."
        "input"
        "screens"
        "services"
        "ui"
        "transport"
    REQUIRES
        lvgl
)