idf_component_register(
    SRCS
        "app.cpp"
        "input/*.cpp"
        "screens/*.cpp"
        "services/*.cpp"
        "ui/*.cpp"
        "transport/*.cpp"
        "protocol/*.cpp"
    INCLUDE_DIRS
        "."
        "input"
        "screens"
        "services"
        "ui"
        "transport"
        "protocol"
    REQUIRES
        lvgl
)