idf_component_register(
    SRCS
        "app.cpp"
        "input/*.cpp"
        "screens/*.cpp"
        "services/*.cpp"
        "ui/*.cpp"
        "ui/fonts/*.c"
        "transport/*.cpp"
        "protocol/*.cpp"
        "state/*.cpp"
        "models/*.cpp"
    INCLUDE_DIRS
        "."
        "input"
        "screens"
        "services"
        "ui"
        "transport"
        "protocol"
        "state"
        "models"
    REQUIRES
        lvgl
)
